Fixed text alignment

--- a/CSS/SurveyForm.css
+++ b/CSS/SurveyForm.css
@@ -5,7 +5,6 @@ body {
 label {
   display: block;
   margin: 0.5rem 0;
-  text-align: center;
 }
 
 form {
@@ -31,7 +30,6 @@ h1,p {
 input, textarea, select {
   margin: 10px 0 0 0;
   width: 100%;
-  text-align: center;
 }
 
 .submit {
